--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ github_username: utdcsg
 # Customizations
 permalink: /:categories/:year/:title/
 logo: /assets/logo.png
+favicon: /assets/favicon.png
 
 # Build settings
 markdown: kramdown
