--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,22 @@ logo: /assets/logo.png
 favicon: /assets/favicon.png
 excerpt_separator: "<!--more-->"
 
+# Pagination
+pagination:
+  enabled: true
+  per_page: 7
+  permalink: '/posts/:num/'
+  title: ' - posts :num'
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
+
 # Build settings
 markdown: kramdown
 theme: ictusrye
 gems:
   - jekyll-feed
+  - jekyll-paginate-v2
 exclude:
   - Gemfile
   - Gemfile.lock
